name:                adaptive-estimator
version:             0.1.0.0
synopsis:            Adapts to estimate an approximation of your function!
-- description:
homepage:            https://github.com/Camsbury/adaptive-estimator
license:             MIT
license-file:        LICENSE
author:              Cameron Kingsbury
maintainer:          camsbury7@gmail.com
-- copyright:
category:            Machine Learning
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010
